# ai-opportunity-tracker

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: README.md  base.py
backend/app/api/routers/: health.py
backend/app/application/: README.md  exceptions.py
backend/app/application/dto/: __init__.py  pagination.py
backend/app/application/services/: __init__.py  opportunity_service.py  organization_service.py  professor_service.py  source_service.py
backend/app/core/: config.py  dependencies.py  logging.py
backend/app/domain/: enums.py
backend/app/domain/entities/: __init__.py  notification.py  opportunity.py  opportunity_match.py  organization.py  professor.py  scrape_job.py  scrape_result.py  skill.py  source.py  user_profile.py
backend/app/domain/ports/: __init__.py  llm_port.py  notification_repository.py  notifier_port.py  opportunity_match_repository.py  opportunity_repository.py  organization_repository.py  professor_repository.py  scrape_job_repository.py  scraper_port.py  skill_repository.py  source_repository.py  user_profile_repository.py
backend/app/domain/value_objects/: __init__.py  fingerprint.py  location.py  money.py
backend/app/infrastructure/cache/: redis_client.py
backend/app/infrastructure/db/: base.py  models.py  notification_model.py  opportunity_match_model.py  opportunity_model.py  organization_model.py  professor_model.py  scrape_job_model.py  scrape_result_model.py  session.py  skill_model.py  source_model.py  user_profile_model.py
backend/app/infrastructure/db/mappers/: __init__.py  notification_mapper.py  opportunity_mapper.py  opportunity_match_mapper.py  organization_mapper.py  professor_mapper.py  scrape_job_mapper.py  skill_mapper.py  source_mapper.py  user_profile_mapper.py
backend/app/infrastructure/db/repositories/: __init__.py  base.py  notification_repository.py  opportunity_match_repository.py  opportunity_repository.py  organization_repository.py  professor_repository.py  scrape_job_repository.py  skill_repository.py  source_repository.py  user_profile_repository.py
backend/app/infrastructure/scrapers/: README.md  __init__.py  adapter.py  browser.py  context.py  exceptions.py  http_client.py  metrics.py  pipeline.py  rate_limiter.py  registry.py  robots.py
backend/app/infrastructure/scrapers/sources/: __init__.py  rss_feed.py
backend/app/infrastructure/scrapers/stages/: __init__.py  emit.py  fetch.py  fingerprint.py  normalize.py  parse.py  persist.py  validate.py
backend/app/tools/: base.py
backend/app/workers/: celery_app.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_repositories.py  test_services.py
backend/tests/unit/: test_health.py  test_mappers.py  test_services.py
backend/tests/unit/scrapers/: test_rss_feed.py  test_stages.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/styles/: index.css
infra/: README.md
